--- a/BCD/User Interface/Base.lproj/Main.storyboard
+++ b/BCD/User Interface/Base.lproj/Main.storyboard
@@ -2158,7 +2158,7 @@
         <image name="liuliet-pro" width="115.33333587646484" height="120"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="bbS-pi-LKM"/>
+        <segue reference="iAP-o1-lDR"/>
         <segue reference="pFk-eZ-ib2"/>
         <segue reference="4Jb-o1-lRn"/>
     </inferredMetricsTieBreakers>
